fix layout issue, update css mixins

--- a/src/styles/scss/_components.scss
+++ b/src/styles/scss/_components.scss
@@ -20,14 +20,20 @@ button {
     transition: none;
   }
   
-  @include mixins.mquery-phones {
-    border-radius: 30px;
+  @include mixins.mobile {
+    border-radius: 1.875rem;
     height: 3rem;
   }
 }
 
 form {
   position: relative;
+  margin-top: 2.5rem;
+    @include mixins.mobile {
+      margin: 2rem 0 0;
+      width: 100%;
+      box-sizing: border-box;
+    }
 }
 
 input,
@@ -35,17 +41,14 @@ input::placeholder {
   color: variables.$desaturated-red;
   font-family: variables.$font-main;
   font-size: variables.$font-size_main;
-  @include mixins.mquery-phones {
+  @include mixins.mobile {
     font-size: 0.9rem;
-  }
-  @include mixins.mquery-ipadPro {
-    font-size: 1.15rem;
   }
 }
 
 input {
   background-color: transparent;
-  border: 1px solid hsla(0, 36%, 70%, 0.5);
+  border: 0.1rem solid variables.$input-border;
   background-size: 1.5rem;
   background-repeat: no-repeat;
   background-position: calc(100% - 6.5rem) 50%;
@@ -54,26 +57,19 @@ input {
   padding-top: 0.3em;
   width: 27rem;
   z-index: -1;
-  @include mixins.mquery-phones {
+  @include mixins.mobile {
     padding-left: 1.5em;
-    width: 90%;
-    background-position: calc(100% - 4rem) 50%;
+    width: 100%;
+    box-sizing: border-box;
+    background-position: calc(100% - 4.5rem) 50%;
   }
-  @include mixins.mquery-verySmallDesktops {
-    width: 90%;
-  }
-}
-
-.input-error {
-  border: 2px solid variables.$soft-red;
-  background-image: url('../../src/images/icon-error.svg');
 }
 
 button {
   background-image: linear-gradient(variables.$gradient_main);
-  box-shadow: 0 0.8rem 1rem rgba(206, 151, 151, 0.4);
+  box-shadow: 0 0.8rem 1rem variables.$button-shadow;
   border: none;
-  color: white;
+  color: variables.$white;
   cursor: pointer;
   font-size: 0.8rem;
   padding: 0;
@@ -87,19 +83,8 @@ button {
     transition: none;
   }
   
-  @include mixins.mquery-verySmallDesktops {
-    right: 1.5rem;
-  }
-  @include mixins.mquery-phones {
-    right: 2rem;
+  @include mixins.mobile {
     width: 4rem;
-  }
-  @include mixins.mquery-tablets {
-    right: 1rem;
-    width: 5rem;
-  }
-  @include mixins.mquery-ipadPro {
-    right: -7.5rem;
   }
   &:hover {
     background-image: linear-gradient(variables.$gradient_med);
@@ -113,10 +98,27 @@ button i {
   font-weight: 900;
 }
 
+.input-error {
+  border: 0.15rem solid variables.$soft-red;
+  background-image: url('../../src/images/icon-error.svg');
+}
+
+.logo-header {
+  margin-top: 4rem;
+  @include mixins.mobile {
+    margin-top: 1rem;
+  }
+}
+
 .error-message {
   color: variables.$soft-red;
   display: block;
   font-size: 0.9rem;
   margin-left: 2.2em;
   margin-top: 1em;
+
+  @include mixins.mobile {
+    margin-left: 1.5em;
+    margin-top: 0.5em;
+  }
 }
